--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "postman-request": "^2.88.1-postman.28"
+    "postman-request": "^2.88.1-postman.28",
+    "request": "^2.88.2"
   }
 }
